# LeraLogistik

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  seed_demo.py  start.ps1
app/: config.py  main.py
app/adapters/: base.py  edrpou.py  lardi.py  navixy.py  traccar.py  vies.py
app/agents/: matcher.py  pricing.py
app/db/: models.py  session.py
app/routes/: admin.py  auth.py  chatbot.py  dashboard.py  deals.py  fleet.py  health.py  loads_platform.py  loads_routes.py  onboarding.py  profile.py  search.py  tracking.py  vehicles.py
app/services/: access.py  auth.py  gps_poll.py  ingestion.py  verification.py
app/templates/: base.html  dashboard.html  dashboard_admin.html  dashboard_carrier.html  dashboard_shipper.html  landing.html  load_detail.html
app/templates/admin/: companies.html  dashboard.html  users.html
app/templates/auth/: login.html  register.html
app/templates/chatbot/: _bubble.html
app/templates/components/: counters.html
app/templates/deals/: detail.html  list.html
app/templates/fleet/: edit_vehicle.html  index.html  new_vehicle.html
app/templates/loads/: my.html  new.html
app/templates/onboarding/: _lookup_result.html  index.html
app/templates/profile/: _contact_success.html  company.html
docs/: ARCHITECTURE.md  CLAUDE_CODE_CONTEXT.md  DEPLOY.md  LARDI_API_NOTES.md  PROJECT_GOAL.md  PROJECT_STATE.md  ROADMAP.md  SETUP.md
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_gps_and_platform_loads.py  003_traccar_device_fields.py  004_feedback_and_pricing.py  005_fix_vehicles_columns.py  006_fix_schema_mismatches.py  README.md
tests/: test_lardi_adapter.py  test_matcher.py
(+4 files in other folders)
